Move recordId to front of dataset list row; adjust and fix some column width and spacing issues; remove select header.

--- a/UploadDashboard/war/Runtime.css
+++ b/UploadDashboard/war/Runtime.css
@@ -34,6 +34,9 @@
 }
 .oa_row {
 }
+.selected_row {
+	background-color: #fffed4;
+}
 .oa_row td {
 	border: 2px purple !important;
 }
